# devops-copilot

./: .gitignore  pyproject.toml
src/: chatbot.py  langchain_agent.py
